--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
                 Ready to watch? Enter you email to create or restart you membership.
             </div>
             
-            <div class="email">
-                <input class="email-input" type="text" placeholder="Email address">
-                <button class="get-started-button">
-                    Get Started >
-                </button>
-            </div>
+            <form action="">
+                <div class="email">
+                    <input class="email-input" type="text" placeholder="Email address" required>
+                    <button type="submit" class="get-started-button">
+                        Get Started >
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 
